--- a/src/app/ZS/mine/template/MineComponent.html
+++ b/src/app/ZS/mine/template/MineComponent.html
@@ -102,14 +102,16 @@
               <td>
                 <p>退款/退货</p>
               </td>
-              <td colspan="1" style="border-right: 1px solid #ddd;">
+              <td style="border-right: 1px solid #ddd;">
                 <p>￥59.90</p>
               </td>
-              <td colspan="1" style="border-right: 1px solid #ddd;" class="orderDetil">
+              <td style="border-right: 1px solid #ddd;" class="orderDetil">
                 <p [class.tab_focus]="textShow==9" (click)="perNine()">订单详情</p>
               </td>
-              <td colspan="1" style="border-right: 1px solid #ddd;">
-                <p>评价</p>
+              <td style="border-right: 1px solid #ddd;">
+                <p>
+                  <a routerLink="/index/review">评价</a>
+                </p>
               </td>
             </tr>
           </tbody>
@@ -177,12 +179,12 @@
             <td>
               <ul>
                 <li class="l-order-img">
-                  <a href="#/product-details">
+                  <a routerLink="/index/product-details">
                     <img src="http://img.guocool.com/800X800/product/2017/06/23/c76c6087d3154f9aa86c23ad6be604d6.jpg">
                   </a>
                 </li>
                 <li class="l-order-name">
-                  <a href="#/product-details">台湾凤梨</a>
+                  <a routerLink="/index/product-details">台湾凤梨</a>
                 </li>
               </ul>
             </td>
@@ -202,7 +204,9 @@
               <p [class.tab_focus]="textShow==9" (click)="perNine()">订单详情</p>
             </td>
             <td style="border-right: 1px solid #ddd;">
-              <p>评价</p>
+              <p>
+                <a routerLink="/index/review">评价</a>
+              </p>
             </td>
           </tr>
           </tbody>
@@ -233,7 +237,7 @@
             <td>
               <ul>
                 <li class="l-integral-img">
-                  <a routerLink="#/product-details" >
+                  <a routerLink="#/product-details">
                     <img src="http://img.guocool.com/800X800/product/2017/06/23/c76c6087d3154f9aa86c23ad6be604d6.jpg">
                   </a>
                 </li>
@@ -340,11 +344,11 @@
             <li class="l-basicinfo-sex">
               <span>性别</span>
               <div class="l-csex">
-                <input type="checkbox">
+                <input type="radio" name="radio">
                 <label>男</label>
-                <input type="checkbox">
+                <input type="radio" name="radio">
                 <label>女</label>
-                <input type="checkbox" checked="checked">
+                <input type="radio" name="radio" checked="checked">
                 <label>保密</label>
               </div>
             </li>
