--- a/src/app/ZS/balance-secondContent/balance-secondContent.html
+++ b/src/app/ZS/balance-secondContent/balance-secondContent.html
@@ -70,15 +70,22 @@
       </ul>
       <div class="f-order-item-sendinfo pull-left">
         <h5 class="clearfix">
-          <a href="javascript:;" class="pull-right" id="modifyTime">修改</a>
           <span class="pull-left">配送时间</span>
-          <p class="pull-left">无</p>
+          <p class="pull-left">
+            <select style="width: 170px; margin-top: -1px; border-radius: 5px; border-color: #dddddd; color: #999999;">
+              <option value="110">请选择配送时间</option>
+              <option value="111">2017-9-28</option>
+              <option value="112">2017-9-29</option>
+              <option value="113">2017-9-30</option>
+              <option value="114">2017-10-01</option>
+            </select>
+          </p>
         </h5>
-        <h5 class="clearfix">
+       <!-- <h5 class="clearfix">
           <a href="javascript:;" class="pull-right" id="fpxx">修改</a>
           <span class="pull-left">发票信息</span>
           <p class="pull-left">无</p>
-        </h5>
+        </h5>-->
         <h5 class="f-end clearfix">
           <textarea class="f-form-control pull-right" rows="3" placeholder="请填写备注信息" id="mzxx"></textarea>
           <span class="pull-left">备注信息</span>
