--- a/src/app/ZS/balance-sc-address/balanceScAddress.html
+++ b/src/app/ZS/balance-sc-address/balanceScAddress.html
@@ -2,7 +2,7 @@
 </div>
 <div class="f-dialog">
   <h5 class="f-dialog-til">
-    <span class="pull-right iconfont"><img src="../../assets/collect/cha.png"></span>
+    <span class="pull-right iconfont"><a href="javascript:;"><img src="../../assets/collect/cha.png"></a></span>
     新增收货人信息
   </h5>
   <div class="f-dialog-con">
@@ -17,32 +17,30 @@
         <label>
           <span class="VI-color1">*</span>选择地区
         </label>
-        <div class="inpSel act">
-          <input type="hidden">
-          <span>省/直辖市</span>
-          <ul class="list-unstyled" style="display: block;">
-            <li data-id="144252">广东省</li>
-            <li data-id="143983">河北省</li>
-            <li data-id="144005">天津省</li>
-            <li data-id="143949">北京</li>
-            <li data-id="106340">安徽省</li>
-            <li data-id="1">江苏省</li>
-            <li data-id="54351">浙江省</li>
-            <li data-id="145855">上海崇明</li>
-            <li data-id="106092">上海</li>
-          </ul>
-        </div>
-        <div class="inpSel disabl">
-          <input type="hidden" value="" id="city">
-          <span id="spcity">市</span>
-          <ul id="lscity" class="list-unstyled">
-          </ul>
-        </div>
-        <div class="inpSel sel1 disabl">
-          <input type="hidden" value="" id="area">
-          <span id="sparea">区／县</span>
-          <ul id="lsarea" class="list-unstyled">
-          </ul>
+        <div>
+          <select class="province" style="display: block; width: 114px; border-color: #dddddd;  border-radius: 5px; ">
+            <option data-id="144252">广东省</option>
+            <option data-id="143983">河北省</option>
+            <option data-id="144005">天津省</option>
+            <option data-id="143949">北京</option>
+            <option data-id="106340">安徽省</option>
+            <option data-id="1">江苏省</option>
+            <option data-id="54351">浙江省</option>
+            <option data-id="145855">上海崇明</option>
+            <option data-id="106092">上海</option>
+          </select>
+          <select class="city" style="display: block;margin-left: 239px; position: absolute;margin-top: -25px; width: 94px; border-color: #dddddd; border-radius: 5px;">
+            <option value="75">深圳</option>
+            <option value="76">东苑</option>
+            <option value="77">佛山</option>
+          </select>
+          <select class="area" style="margin-left: 267px; position: absolute; margin-top: -25px; width: 100px; border-color: #dddddd; border-radius: 5px;">
+          <option value="705">福田区</option>
+          <option value="706">罗湖区</option>
+          <option value="707">南山区</option>
+          <option value="708">宝安区</option>
+          <option value="709">龙岗区</option>
+          </select>
         </div>
       </div>
       <div class="f-form-formitem clearfix">
