--- a/src/app/ZS/homepage-head/css/HomepageHeadComponent.css
+++ b/src/app/ZS/homepage-head/css/HomepageHeadComponent.css
@@ -1,10 +1,17 @@
 nav{
-  float: left;
+ /* float: left;
   width:100%;
   height:40px;
   padding: 0 ;
   margin-top: 16px;
-  margin-left: 15px;
+  margin-left: 15px;*/
+
+  float: left;
+  /* width: 100%; */
+  height: 30px;
+  padding: 0;
+  margin-top: 28px;
+  margin-left: 28px;
 }
 nav ul {
   float:left;
@@ -16,8 +23,8 @@ nav ul {
 nav ul li{
   display: inline;
 }
-nav ul li a {
-  height:40px;
+.home-li-ai{
+  /*height:40px;
   float: left;
   padding-top: 9px;
   padding-left:0%;
@@ -27,10 +34,38 @@ nav ul li a {
   color: #999;
   font-family: "Adobe 宋体 Std L"!important;
   font-weight: bold;
+  outline: none;*/
+  height: 25px;
+  border-right: 1px solid;
+  width: 100px;
+  float: left;
+  padding-top: 3px;
+  padding-left: 0%;
+  font-size: 14px;
+  text-align: center;
+  text-decoration: none;
+  color: #999;
+  font-family: "Adobe \5B8B\4F53 Std L"!important;
+  font-weight: bold;
   outline: none;
 }
 nav li a:hover {
   background-color: #eee;
+}
+.home-li-a{
+  border-right: 1px solid white;
+  height: 25px;
+  width: 100px;
+  float: left;
+  padding-top: 3px;
+  padding-left: 0%;
+  font-size: 14px;
+  text-align: center;
+  text-decoration: none;
+  color: #999;
+  font-family: "Adobe \5B8B\4F53 Std L"!important;
+  font-weight: bold;
+  outline: none;
 }
 /* 首页头部 */
 .homepage-head{
